UI change and adding load data script

--- a/views/indexUber.ejs
+++ b/views/indexUber.ejs
@@ -8,6 +8,8 @@
 <!-- attach CSS styles -->
     <link href="/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/assets/css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/assets/css/simple-sidebar.css" >
+
     <%activeMenu = "Home"%>
     <%include layout/navbar.ejs%>
 </head>
