--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -8,22 +8,22 @@
     }
 
 </style>
-<footer class="footer site-footer" style="width: 100%;background-color: #808080; color: #000000; position: relative; height: 50px;clear:both">
+<footer class="footer" style="width: 100%;background-color: dimgray; color: #000000; position: relative; height: 50px;clear:both">
     </hr>
     <div class="container">
-    <div class="row">
-        <div class="col-md-6">
-            <p>© 2015 WillGive</p>
+        <div class="row">
+            <div class="col-md-6">
+                <p>CopyRight© 2015 WillGive</p>
+            </div>
+            <div class="col-md-6">
+                <ul class="nav nav-pills pull-right">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="/aboutus">About Us</a></li>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="/contactus">Contact Us</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="col-md-6">
-            <ul class="nav nav-pills pull-right">
-                <li><a href="/">Home</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="/aboutus">About Us</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="/contactus">Contact Us</a></li>
-            </ul>
-        </div>
-    </div>
     </div>
 </footer>
