--- a/public/assets/css/simple-sidebar.css
+++ b/public/assets/css/simple-sidebar.css
@@ -22,11 +22,10 @@ html,body {
 }
 
 
-
-body {
+.sidebar-content {
     padding-top: 51px;
-
 }
+
 a {
     color:#efefef;
 }
@@ -63,7 +62,7 @@ a {
     padding-left:1px;
 }
 #sidebar li a:hover {
-    font-style: italic;
+
     color:#ffffff;
 }
 
@@ -129,125 +128,122 @@ a {
         border-bottom-color: #fff;
     }
 }
-/*
-html,body {
+
+/** another sidebar, but hard to deal with footer
+
+#wrapper {
+    padding-left: 0;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+#wrapper.toggled {
+    padding-left: 250px;
+}
+
+#sidebar-wrapper {
+    z-index: 1000;
+    position: fixed;
+    left: 250px;
+    width: 0;
     height: 100%;
+    margin-left: -250px;
+    overflow-y: auto;
+    background: #000;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
 }
 
-.page-container {
-    min-height: 100%;
-    height: auto !important;
-    height: 100%;
-    background: #ffffff;
-    color: #000000;
-    margin: 0 auto -120px;
-    padding: 0 0 120px;
+#wrapper.toggled #sidebar-wrapper {
+    width: 250px;
+}
+
+#page-content-wrapper {
+    width: 100%;
+    position: absolute;
+    padding: 15px;
+}
+
+#wrapper.toggled #page-content-wrapper {
+    position: absolute;
+    margin-right: -250px;
 }
 
 
-body {
-    padding-top: 51px;
-    color: #000000;
-}
-a {
-    color:#efefef;
-}
-.text-center {
-    padding-top: 20px;
+.sidebar-nav {
+    position: absolute;
+    top: 0;
+    width: 250px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
 
-#sidebar {
-    height: 100%;
-    padding-right: 0;
-    padding-top: 20px;
+.sidebar-nav li {
+    text-indent: 20px;
+    line-height: 40px;
 }
 
-#sidebar .affix {
-    position:fixed;
-    top:55;
-    width:220px;
+.sidebar-nav li a {
+    display: block;
+    text-decoration: none;
+    color: #999999;
 }
 
-#sidebar .affix-bottom {
-    position:fixed;
-    top:55;
-    width:220px;
+.sidebar-nav li a:hover {
+    text-decoration: none;
+    color: #fff;
+    background: rgba(255,255,255,0.2);
 }
 
-#sidebar .nav {
-    width: 95%;
-}
-#sidebar li {
-    border:0 #1e1e1e solid;
-    border-bottom-width:1px;
-}
-#sidebar li a {
-    padding-left:1px;
-}
-#sidebar li a:hover {
-    font-style: italic;
-    background-color:#ffffff;
-    color:#000000;
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
+    text-decoration: none;
 }
 
-@media screen and (max-width: 767px) {
-    .row-offcanvas {
+.sidebar-nav > .sidebar-brand {
+    height: 65px;
+    font-size: 18px;
+    line-height: 60px;
+}
+
+.sidebar-nav > .sidebar-brand a {
+    color: #999999;
+}
+
+.sidebar-nav > .sidebar-brand a:hover {
+    color: #fff;
+    background: none;
+}
+
+@media(min-width:768px) {
+    #wrapper {
+        padding-left: 250px;
+    }
+
+    #wrapper.toggled {
+        padding-left: 0;
+    }
+
+    #sidebar-wrapper {
+        width: 250px;
+    }
+
+    #wrapper.toggled #sidebar-wrapper {
+        width: 0;
+    }
+
+    #page-content-wrapper {
+        padding: 20px;
         position: relative;
-        -webkit-transition: all 0.25s ease-out;
-        -moz-transition: all 0.25s ease-out;
-        transition: all 0.25s ease-out;
-    }
-    .row-offcanvas-right
-    .sidebar-offcanvas {
-        right: -41.6%;
     }
 
-    .row-offcanvas-left
-    .sidebar-offcanvas {
-        left: -41.6%;
-    }
-    .row-offcanvas-right.active {
-        right: 41.6%;
-    }
-    .row-offcanvas-left.active {
-        left: 41.6%;
-    }
-    .sidebar-offcanvas {
-        position: absolute;
-        top: 0;
-        width: 41.6%;
-    }
-    #sidebar {
-        background-color:#3b3b3b;
-        padding-top:0;
-    }
-    #sidebar .nav>li {
-        color: #ddd;
-        background: linear-gradient(#3E3E3E, #383838);
-        border-top: 1px solid #484848;
-        border-bottom: 1px solid #2E2E2E;
-        padding-left:10px;
-    }
-    #sidebar .nav>li:first-child {
-        border-top:0;
-    }
-    #sidebar .nav>li>a {
-        color: #ddd;
-    }
-    #sidebar .nav>li>a>img {
-        max-width: 14px;
-    }
-    #sidebar .nav>li>a:hover, #sidebar .nav>li>a:focus {
-        text-decoration: none;
-        background: linear-gradient(#373737, #323232);
-        color: #fff;
-    }
-    #sidebar .nav .caret {
-        border-top-color: #fff;
-        border-bottom-color: #fff;
-    }
-    #sidebar .nav a:hover .caret{
-        border-top-color: #fff;
-        border-bottom-color: #fff;
+    #wrapper.toggled #page-content-wrapper {
+        position: relative;
+        margin-right: 0;
     }
 }*/
