--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -6,6 +6,7 @@
 
     <title>WillGive</title>
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="/assets/css/simple-sidebar.css" >
 
     <%activeMenu = "About"%>
     <%include layout/navbar.ejs%>
