--- a/views/contactUs.ejs
+++ b/views/contactUs.ejs
@@ -6,6 +6,7 @@
 
     <title>WillGive</title>
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="/assets/css/simple-sidebar.css" >
 
     <%activeMenu = "Contact"%>
     <%include layout/navbar.ejs%>
@@ -30,6 +31,9 @@
             <div class="row">
                 <div class="col-md-2"><label>What's up?</label></div>
                 <div class="col-md-8"><textarea rows="3" class="form-control"></textarea></div>
+            </div>
+            <div class="row" style="padding-top: 2%">
+                <button type="button" class="btn btn-lg btn-primary center-block">Contact Us</button>
             </div>
         </form>
     </div>
