--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -1,4 +1,4 @@
-﻿<footer class="footer navbar-fixed-bottom">
+﻿<footer>
     <div class="container">
     <div class="row">
         <div class="col-md-6">
