--- a/views/login/userContribution.ejs
+++ b/views/login/userContribution.ejs
@@ -37,6 +37,9 @@
                     <li>
                         <a href="/users/contribution" style="color: #000000;"><strong>My Contributions</strong></a>
                     </li>
+                    <li>
+                        <a href="/users/collections" style="color: #000000;">My Collections</a>
+                    </li>
                 </ul>
             </div>
         </div>
