--- a/views/login/userPaymentMethod.ejs
+++ b/views/login/userPaymentMethod.ejs
@@ -35,6 +35,9 @@
                     <li>
                         <a href="/users/contribution" style="color: #000000;">My Contributions</a>
                     </li>
+                    <li>
+                        <a href="/users/collections" style="color: #000000;">My Collections</a>
+                    </li>
                 </ul>
             </div>
         </div>
