--- a/views/indexUber.ejs
+++ b/views/indexUber.ejs
@@ -28,7 +28,7 @@
     <div class="text-vcenter">
         <h1 style="font-family: cursive; font-style: normal ">WILL GIVE</h1>
         <h3>Donate A Lot</h3>
-        <a href="#about" class="btn btn-default btn-lg">Charity Register</a>
+        <a href="/recipient/signup" class="btn btn-default btn-lg">Charity Register</a>
     </div>
 </div>
 <!-- /first section -->
