adding empty file, separate recipient signup into two steps

--- a/views/login/signin.ejs
+++ b/views/login/signin.ejs
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="/assets/css/social-buttons.css">
     <link rel="stylesheet" href="/assets/css/customJqueryValidation.css">
+    <link rel="stylesheet" href="/assets/css/simple-sidebar.css" >
+
 
     <%activeMenu = "SignIn"%>
     <%include ../layout/navbar.ejs%>
