--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,67 +1,125 @@
-<!doctype html>
-<html lang="en" ng-app="willGiveApp">
+<!DOCTYPE html>
+<html lang="en" >
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta charset="utf-8" />
+    <meta name="author" content="Script Tutorials" />
     <title>WillGive</title>
-    <script src="jquery/dist/jquery.js"></script>
-    <script src="bootstrap/dist/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.css">
-    <script src="angular/angular.js"></script>
-    <script src="angularJs/willGiveApp.js"></script>
-    <!-- Go to www.addthis.com/dashboard to customize your tools -->
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-54ade3b442958c1a" async="async"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <!-- attach CSS styles -->
+    <link href="/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/assets/css/simple-sidebar.css" >
+
     <%activeMenu = "Home"%>
     <%include layout/navbar.ejs%>
 </head>
+
+
+
 <body>
+<!--  BODY PAGE CONTENT -->
+<!-- attach JavaScripts -->
+<!-- navigation panel -->
+
+
+
+<!-- first section - Home -->
+<div id="home" class="home">
+    <div class="text-vcenter">
+        <h1 style="font-family: cursive; font-style: normal ">WILL GIVE</h1>
+        <h3>Donate A Lot</h3>
+        <a href="/recipient/signup" class="btn btn-default btn-lg">Charity Register</a>
+    </div>
+</div>
+<!-- /first section -->
+
+<!-- second section - About -->
+
+<div id="about" class="pad-section">
 
     <div class="container">
-        <div class="hero-unit">
-            <h1 class="text-center"> Welcome to WillGive </h1>
-        </div>
-
         <div class="row">
-            <div class="col-md-12">
-                <div id="carousel-example-generic" class="carousel slide" data-interval="3000" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="1" class=""></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="2" class=""></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="item active">
-                            <img alt="First slide" src="resources/images/donateNow_1.png">
-                            <div class="carousel-caption">1</div>
-                        </div>
-                        <div class="item">
-                            <img alt="Second slide" src="resources/images/donateNow_2.png">
-                            <div class="carousel-caption">2</div>
-                        </div>
-                        <div class="item">
-                            <img alt="Third slide" src="resources/images/donateNow_3.png">
-                            <div class="carousel-caption">3</div>
-                        </div>
-                    </div>
+            <div class="col-sm-6">
+                <img src="/images/logo.jpg" alt="" />
+            </div>
 
-
-                    <!-- Controls -->
-                    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left"></span>
-                    </a>
-                    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right"></span>
-                    </a>
-                </div> <!-- Carousel -->
-
-                </hr>
+            <div class="col-sm-6 text-center">
+                <h2>Make A Better World</h2>
+                <p class="lead">Donation make the world better. Please donate as much as you have !!!</p>
             </div>
         </div>
-
-
     </div>
-    <%include layout/footer.ejs%>
+</div>
+<!-- /second section -->
+
+
+<!-- third section - Services -->
+<div id="services" class="pad-section">
+    <div class="container">
+        <h2 class="text-center">Our Services</h2> <hr />
+        <div class="row text-center">
+            <div class="col-sm-3 col-xs-6">
+                <i class="glyphicon glyphicon-cloud"> </i>
+                <h4>Service web</h4>
+                <p>You can donate through our website</p>
+            </div>
+            <div class="col-sm-3 col-xs-6">
+                <i class="glyphicon glyphicon-leaf"> </i>
+                <h4>Service APP</h4>
+                <p>We have dedicated mobile app for both iphone and android to raise money</p>
+            </div>
+            <div class="col-sm-3 col-xs-6">
+                <i class="glyphicon glyphicon-phone-alt"> </i>
+                <h4>QR code</h4>
+                <p>We can generate QR code for u to make an easy donation</p>
+            </div>
+            <div class="col-sm-3 col-xs-6">
+                <i class="glyphicon glyphicon-bullhorn"> </i>
+                <h4>Credit Card</h4>
+                <p>We surpport all kinds of credit cards and paypal. </p>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- /third section -->
+
+
+<!-- fourth section - Information -->
+
+<div id="information" class="pad-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h2 class="panel-title">Additional information</h2>
+                    </div>
+                    <div class="panel-body lead">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet.
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h2 class="panel-title">Additional information</h2>
+                    </div>
+                    <div class="panel-body lead">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- /fourth section -->
+
+<%include layout/footer.ejs%>
+
+<!-- /footer -->
+
+<script src="/jquery/dist/jquery.js"></script>
+<script src="/bootstrap/dist/js/bootstrap.min.js"></script>
 
 </body>
 
