--- a/views/login/resetPassword.ejs
+++ b/views/login/resetPassword.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="/assets/css/customJqueryValidation.css">
     <link rel="stylesheet" href="/assets/css/social-buttons.css">
+    <link rel="stylesheet" href="/assets/css/simple-sidebar.css" >
 
 
 
